# Student-Performance-Report

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  demo.py  deploy.sh  docker-compose.yml  generate_data.py  prediction_history.json  pyproject.toml  requirements.txt  setup.py  template.py
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
config/: model.yaml  schema.yaml
data/: student_data.json  student_data_full.csv  test.csv  train.csv
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: mongodb_handler.py  student_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
static/css/: style.css
templates/: studentdata.html
